--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
-<<<<<<< HEAD
-    "express": "^4.17.1"
-=======
     "express": "^4.17.1",
+    "node-uuid": "^1.4.8",
     "ws": "^7.1.1"
->>>>>>> 6eb3405a39c0e452f997982cbd5ab860c8f86b3e
   }
 }
