--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "demo.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint * --fix"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,8 @@
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-plugin-vue": "^5.2.3",
     "express": "^4.17.1",
     "node-uuid": "^1.4.8",
     "ws": "^7.1.1"
